--- a/MultiWindow/app/src/main/res/values/strings.xml
+++ b/MultiWindow/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MultiWindow</string>
+    <string name="PIP">Picture In Picture</string>
+    <string name="Split_Screen">Split Screen</string>
+    <string name="Freeform">Freeform</string>
 </resources>
