--- a/Notification/app/src/main/res/values/strings.xml
+++ b/Notification/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Notification</string>
+    <string name="Content_Example">This is Android Notification</string>
+    <string name="Content">Content</string>
 </resources>
